# carlo

./: .dockerignore  .gitignore  Dockerfile  README.md  camerasandCanandGnssCalibratedAll_lidars00-virtual 1.json  pyproject.toml  requirements.txt
examples/: Camera sensors.ipynb  Sensors camera.ipynb
src/: visualizer.ipynb
src/common/: client.py  log.py  rig.py  sensors.py  session.py  spawn.py
src/experiments/: experiment_settings.py  experiments.py
src/main/: camera_from_rig.py  generate_test.py  generate_train.py  generic_nerf_capture.py
src/scripts/: camera.py  camera_from_rig.py  camera_from_rig_capture.py  double_camera.py  fpstest.py  generate_traffic.py  generic_nerf_capture.py  idun.py  intercept.py  lidar.py  nerf_capture.py  nerf_capture_colmap.py  semantic.py  sicko.py  side_by_side.py  spectate.py  test_rig_parse.py  transfuser.py  wasd.py
src/sensors/: camera.py  camera_rig.py  depth.py  lidar.py  segmentation.py  sensor.py
src/util/: carla_to_nerf.py  compare_exp_res.py  confirm_overwrite.py  convert_transforms.py  create_camera_rigs_from_rig.py  create_slurm_script.py  ema.py  stopwatch.py  timer.py  transform_file.py  transformation_matrix_conversion.py  vehicle.py
