[tool.poetry]
name = "carlo"
version = "0.1.0"
description = "Your next door taxi driver"
authors = [
    "Aksel Lunde Aase <aksel.lunde.aase@gmail.com>",
    "Mathias Wold <mathias.wold@ntnu.no>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
carla = "0.9.13"
ansicolors = "^1.1.8"
numpy = "^1.23.4"
typer = {extras = ["all"], version = "^0.7.0"}
pydantic = "^1.10.4"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.0"

[tool.poetry.group.rgb]
optional = true

[tool.poetry.group.rgb.dependencies]
opencv-python = "^4.6.0.66"

[tool.poetry.group.lidar]
optional = true

[tool.poetry.group.lidar.dependencies]
open3d = "0.15.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
